# APK-Build-Launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-main.yml
src/: App.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tools.rs
src/components/: ui.tsx
src/hooks/: useBuildLauncher.ts
src/views/: ArtifactsView.tsx  HomeView.tsx  LogsView.tsx  SettingsView.tsx  WorkflowsView.tsx
